tests/snapshots/test_input_errors_read__wrong_peer-2.snap
---
source: tests/test_input_errors_read.rs
expression: result.unwrap_err()
---
Table 'artist' does not have peers defined
