tests/snapshots/test_input_errors_read__wrong_search_keyword.snap
---
source: tests/test_input_errors_read.rs
expression: result.unwrap_err()
---
The column 'id'@'song' is not a text column, but it's specified as a search keyword
