tests/snapshots/test_input_errors_read__wrong_table-2.snap
---
source: tests/test_input_errors_read.rs
expression: result.unwrap_err()
---
Table 'another_wrong_table' not found in schema family. 
Available tables are: album, artist, rel_album_song, song
